name:                wyas
version:             0.1.0.0
synopsis:            Write Yourself A Scheme
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Ben James
-- maintainer:
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable wyasi
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.6 && <4.8
                     , wyas
                     , text >=1.1 && <1.2
                     , attoparsec >=0.12 && <0.13
                     , transformers >=0.4 && <0.5
                     , mmorph >=1.0 && <1.1
                     , containers >=0.5 && <0.6
                     , optparse-applicative >=0.9 && <0.10
  hs-source-dirs:      src     
  default-language:    Haskell2010

library
  exposed-modules:     WYAS.Data, WYAS.Eval, WYAS.Parser, WYAS.REPL
  build-depends:       base >=4.6 && <4.8
                     , text >=1.1 && <1.2
                     , attoparsec >=0.12 && <0.13
                     , vector >=0.10 && <0.11
                     , transformers >=0.4 && <0.5
                     , mmorph >=1.0 && <1.1
                     , haskeline >=0.7 && <0.8
                     , containers >=0.5 && <0.6
  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , wyas
                     , HUnit >=1.2.5
                     , test-framework
                     , test-framework-hunit
  default-language:    Haskell2010
