name:                wyas
version:             0.1.0.0
synopsis:            Write Yourself A Scheme
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Ben James
-- maintainer:
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable wyasi
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.10
                     , wyas
                     , text
                     , transformers
                     , mmorph
                     , containers
                     , optparse-applicative
                     , trifecta
  hs-source-dirs:      src     
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

library
  exposed-modules:     WYAS.Data, WYAS.Eval, WYAS.Parser, WYAS.REPL
  build-depends:       base >=4.7 && <4.10
                     , bytestring
                     , fingertree
                     , utf8-string
                     , text
                     , attoparsec
                     , vector
                     , transformers
                     , mmorph
                     , haskeline
                     , containers
                     , trifecta
                     , ansi-wl-pprint
                     , reducers
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests
  build-depends:       base
                     , wyas
                     , vector
                     , HUnit >=1.2.5
                     , test-framework
                     , test-framework-hunit
  default-language:    Haskell2010
